<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:key="@string/preference_user_login_name_key"
        android:title="@string/preference_user_login_name_title"
        android:summary="@string/preference_user_login_name_summary"/>

    <EditTextPreference
        android:key="@string/preference_user_password_key"
        android:title="@string/preference_user_password_title"
        android:summary="@string/preference_user_password_summary"/>

    <EditTextPreference
        android:key="@string/preference_font_size_key"
        android:title="@string/preference_font_size_title"
        android:defaultValue="11"/>

    <ListPreference
        android:key="@string/preference_secondary_color_key"
        android:entries="@array/color_names"
        android:entryValues="@array/color_values"
        android:title="@string/preference_main_color_title"
        android:summary="@string/preference_main_color_summary"/>

    <ListPreference
        android:key="@string/preference_secondary_color_key"
        android:entries="@array/color_names"
        android:entryValues="@array/color_values"
        android:title="@string/preference_secondary_color_title"
        android:summary="@string/preference_secondary_color_summary"/>

</PreferenceScreen>